Update Post “оказалось-есть-хорошее-аниме”

--- a/content/blog/оказалось-есть-хорошее-аниме.md
+++ b/content/blog/оказалось-есть-хорошее-аниме.md
@@ -18,3 +18,5 @@ draft: false
 Пока я могу отдать должное только этим двум аниме-сериалам: «One Punch Man» и «Mob Psycho 100» (кстати, нарисованы одной компанией).
 
 Больше всего понравился «Ванпанчмен» за столь странный сюжет (в хорошем смысле) и необычных героев. Казалось бы, насколько скучным может оказаться герой, который одним ударом убивает врагов.
+
+![](/assets/1602cbe91b.png.png)
